Add New Section

--- a/Home.html
+++ b/Home.html
@@ -422,32 +422,231 @@
                 </div>
             </div>
         </section>
-        <section id="autobiography">
+        <section id="autobiography1">
             <div class="container">
-                <div class="autobiography">
-                    <div class="name">
-                        <p>AUTOBIOGRAPHY</p>
+                <div class="autobiography1">
+                    <div class="left">
+                        <div class="name">
+                            <p>AUTOBIOGRAPHY</p>
+                        </div>
+                        <div class="title">
+                            <h3>This month's guest host</h3>
+                        </div>
+                        <div class="description">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Lorem ipsum dolor sit.</p>
+                        </div>
+                        <div class="button">
+                            <button>
+                                <p>READ MORE</p>
+                            </button>
+                        </div>
+                        <div class="image">
+                            <img src="./assets/images/home/coffe.png" alt="">
+                        </div>
                     </div>
-                    <div class="title">
-                        <h3>This month's guest host</h3>
+                    <div class="right">
+                        <div class="image1">
+                            <img src="./assets/images/home/eifel.jpg" alt="">
+                        </div>
+                        <div class="image2">
+                            <img src="./assets/images/home/eifeltop.jpg" alt="">
+                        </div>
                     </div>
-                    <div class="description">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        <p>Lorem ipsum dolor sit.</p>
+
+                </div>
+            </div>
+        </section>
+        <section id="autobiography2">
+            <div class="container">
+                <div class="autobiography2">
+
+                    <div class="left">
+                        <div class="backgrounds">
+                            <div class="backgorund-image">
+
+                            </div>
+                            <div class="images">
+                                <div class="image1">
+                                    <img src="./assets/images/home/voyage-1.jpg" alt="">
+                                </div>
+                                <div class="image2">
+                                    <img src="./assets/images/home/voyage-2.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="button">
-                        <button>
-                            <p>READ MORE</p>
-                        </button>
+
+                    <div class="right">
+                        <div class="name">
+                            <p>AUTOBIOGRAPHY</p>
+                        </div>
+                        <div class="title">
+                            <h3>Travelogue of the year</h3>
+                        </div>
+                        <div class="description">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Lorem ipsum dolor sit.</p>
+                        </div>
+                        <div class="button">
+                            <button>
+                                <p>READ MORE</p>
+                            </button>
+                        </div>
+                        <div class="image">
+                            <img src="./assets/images/home/plane.png" alt="">
+                        </div>
                     </div>
-                    <div class="image">
-                        <img src="./assets/images/home/coffe.png" alt="">
+
+                </div>
+            </div>
+        </section>
+        <section id="images">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="row">
+                            <div class="col-8">
+                                <div class="image1">
+                                    <img src="./assets/images/home/gallery-1.jpg" alt="">
+                                </div>
+                                <div class="image4">
+                                    <img src="./assets/images/home/gallery-9.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="image2">
+                                    <img src="./assets/images/home/gallery-2.jpg" alt="">
+                                </div>
+                                <div class="image3">
+                                    <img src="./assets/images/home/gallery-6.jpg" alt="">
+                                </div>
+                                <div class="image5">
+                                    <img src="./assets/images/home/gallery-10.jpg" alt="">
+                                </div>
+                                <div class="image6">
+                                    <img src="./assets/images/home/gallery-11.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                    <div class="col-6">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="image7">
+                                    <img src="./assets/images/home/gallery-4.jpg" alt="">
+                                </div>
+                                <div class="image8">
+                                    <img src="./assets/images/home/gallery-5.jpg" alt="">
+                                </div>
+                                <div class="image9">
+                                    <img src="./assets/images/home/gallery-8.jpg" alt="">
+                                </div>
+                                <div class="image10">
+                                    <img src="./assets/images/home/gallery-12.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-8">
+                                <div class="image11">
+                                    <img src="./assets/images/home/gallery-7.jpg" alt="">
+                                </div>
+                                <div class="image12">
+                                    <img src="./assets/images/home/gallery-3.jpg" alt="">
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section id="brand">
+            <div class="container">
+                <div class="row">
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-1.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-2.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-3.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-4.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-5.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-6.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
+    <footer>
+        <section id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="left1">
+                            <h4>Publishers</h4>
+                            <div class="story">
+                                <p>Bestsellers</p>
+                                <p>Interviews</p>
+                                <p>Authors Story</p>
+                                <p>Book Fairs</p>
+                                <p>Help (FAQ)</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="left2">
+                            <h4>Contact</h4>
+                            <div class="story">
+                                <p>Stay in touch with everything ChapterOne,</p>
+                                <p>follow us on social media and learn about</p>
+                                <p>new promotions.</p>
+                                <div class="icons">
+                                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                    <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href=""><i class="fa-solid fa-basketball"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="left3">
+                            <h4>News & Update</h4>
+                            <div class="story">
+                                <p>We’d love it if you subscribed to our</p>
+                                <p>newsletter! You’ll love it too.</p>
+                                <div class="email-input">
+                                    <input type="text" placeholder=" Email...">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="right">
+                            <h4>Social media</h4>
+                            <div class="story">
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" <script
