Add New Section

--- a/Home.html
+++ b/Home.html
@@ -304,13 +304,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="show-more">
+                        <button class="btn btn-success">Show More</button>
+                    </div>
                 </div>
             </div>
         </section>
         <section id="our-services">
             <div class="container">
                 <div class="service">
-                    <div class="background-image">
+                    <div class="background-image" style="background-image: url(./assets/images/home/our-service.jpg)">
                         <div class="icon">
                             <span>❦</span>
                         </div>
@@ -424,7 +427,7 @@
         </section>
         <section id="autobiography1">
             <div class="container">
-                <div class="autobiography1">
+                <div class="autobiography1" style="background-image: url(./assets/images/home/authobiography-backgorund.jpg)">
                     <div class="left">
                         <div class="name">
                             <p>AUTOBIOGRAPHY</p>
@@ -446,7 +449,7 @@
                             <img src="./assets/images/home/coffe.png" alt="">
                         </div>
                     </div>
-                    <div class="right">
+                    <div class="right" style="background-image: url(./assets/images/home/zerler.png)">
                         <div class="image1">
                             <img src="./assets/images/home/eifel.jpg" alt="">
                         </div>
@@ -464,7 +467,7 @@
 
                     <div class="left">
                         <div class="backgrounds">
-                            <div class="backgorund-image">
+                            <div class="backgorund-image" style="background-image: url(./assets/images/home/background-image-2.png)">
 
                             </div>
                             <div class="images">
@@ -639,7 +642,19 @@
                         <div class="right">
                             <h4>Social media</h4>
                             <div class="story">
-                                
+                                <div class="col-4">
+                                    <div class="images1">
+                                        <img src="./assets/images/home/footer-image-1.jpg" alt="">
+                                        <img src="./assets/images/home/footer-image-2.jpg" alt="">
+                                        <img src="./assets/images/home/footer-image-3.jpg" alt="">
+                                    </div>
+                                    <div class="images2">
+                                        <img src="./assets/images/home/footer-image-4.jpg" alt="">
+                                        <img src="./assets/images/home/footer-image-5.jpg" alt="">
+                                        <img src="./assets/images/home/footer-image-6.jpg" alt="">
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
