Add New Section

--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
                     <div class="col-6">
                         <div class="logo-pages">
                             <div class="logo">
-                                <a href="Home.html"><img src="./assets/images/home/logo.png" alt=""></a>
+                                <a href="Home.html"><img src="./assets/images/home/book-logo-5.png" alt=""></a>
                             </div>
                             <div class="pages">
                                 <ul>
@@ -321,9 +321,8 @@
                             <p>OUR SERVICES</p>
                         </div>
                         <div class="description">
-                            <h3>Aorem ipsum dolor sit amet, consectetur adipisicing</h3>
-                            <h3>elit, sed do eiusmod tempor incididunt ut labore et</h3>
-                            <h3>dolore magna aliqua. Ut enim ad minim.</h3>
+                            <h3>Aorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</h3>
                         </div>
                         <div class="button">
                             <button>
@@ -345,8 +344,9 @@
                         <h1>Authors of the month</h1>
                     </div>
                     <div class="description">
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
-                        <p>ut aliquip ex ea commodo consequat.</p>
+                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                            commodo consequat.</p>
+
                     </div>
                     <div class="row">
                         <div class="col-3">
@@ -361,9 +361,8 @@
                                     <p>Adam Strass</p>
                                 </div>
                                 <div class="author-description">
-                                    <p>Except sint occaecat cupidatat non</p>
-                                    <p>proident, sunt culpa qui officia</p>
-                                    <p>deserunt mollit.</p>
+                                    <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt
+                                        mollit.</p>
                                 </div>
                             </div>
                         </div>
@@ -379,9 +378,7 @@
                                     <p>Jennifer Doe</p>
                                 </div>
                                 <div class="author-description">
-                                    <p>Except sint occaecat cupidatat non</p>
-                                    <p>proident, sunt culpa qui officia</p>
-                                    <p>deserunt mollit.</p>
+                                    <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt mollit.</p>
                                 </div>
                             </div>
                         </div>
@@ -397,9 +394,7 @@
                                     <p>James Coleman</p>
                                 </div>
                                 <div class="author-description">
-                                    <p>Except sint occaecat cupidatat non</p>
-                                    <p>proident, sunt culpa qui officia</p>
-                                    <p>deserunt mollit.</p>
+                                    <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt mollit.</p>
                                 </div>
                             </div>
                         </div>
@@ -415,9 +410,7 @@
                                     <p>Linda Heyes</p>
                                 </div>
                                 <div class="author-description">
-                                    <p>Except sint occaecat cupidatat non</p>
-                                    <p>proident, sunt culpa qui officia</p>
-                                    <p>deserunt mollit.</p>
+                                    <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt mollit.</p>
                                 </div>
                             </div>
                         </div>
@@ -427,7 +420,8 @@
         </section>
         <section id="autobiography1">
             <div class="container">
-                <div class="autobiography1" style="background-image: url(./assets/images/home/authobiography-backgorund.jpg)">
+                <div class="autobiography1"
+                    style="background-image: url(./assets/images/home/authobiography-backgorund.jpg)">
                     <div class="left">
                         <div class="name">
                             <p>AUTOBIOGRAPHY</p>
@@ -436,9 +430,7 @@
                             <h3>This month's guest host</h3>
                         </div>
                         <div class="description">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <p>Lorem ipsum dolor sit.</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore vero, voluptatum repellendus in sequi possimus!</p>
                         </div>
                         <div class="button">
                             <button>
@@ -467,7 +459,8 @@
 
                     <div class="left">
                         <div class="backgrounds">
-                            <div class="backgorund-image" style="background-image: url(./assets/images/home/background-image-2.png)">
+                            <div class="backgorund-image"
+                                style="background-image: url(./assets/images/home/background-image-2.png)">
 
                             </div>
                             <div class="images">
@@ -489,9 +482,7 @@
                             <h3>Travelogue of the year</h3>
                         </div>
                         <div class="description">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <p>Lorem ipsum dolor sit.</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore vero, voluptatum repellendus in sequi possimus!</p>
                         </div>
                         <div class="button">
                             <button>
@@ -656,6 +647,9 @@
 
                                 </div>
                             </div>
+                        </div>
+                        <div class="btn">
+                            <button id="topbtn"><i class="fa-solid fa-arrow-up" style="color: #8a8a8a;"></i></button>
                         </div>
                     </div>
                 </div>
