--- a/Home.html
+++ b/Home.html
@@ -14,7 +14,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/scss/style.css">
-    <title>ChapterOne</title>
+    <title>Home</title>
 </head>
 
 <body>
@@ -25,15 +25,15 @@
                     <div class="col-6">
                         <div class="logo-pages">
                             <div class="logo">
-                                <a href="Home.html"><img src="./assets/images/home/book-logo-5.png" alt=""></a>
+                                <a href="#"><img src="./assets/images/home/book-logo-5.png" alt=""></a>
                             </div>
                             <div class="pages">
                                 <ul>
-                                    <li><a href="Home.html">Home</a></li>
-                                    <li><a href="">About</a></li>
-                                    <li><a href="">Shop</a></li>
-                                    <li><a href="">Contact</a></li>
-                                    <li><a href="">Blog</a></li>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="About.html">About</a></li>
+                                    <li><a href="Shop.html">Shop</a></li>
+                                    <li><a href="Contact.html">Contact</a></li>
+                                    <li><a href="Blog.html">Blog</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -41,7 +41,7 @@
                     <div class="col-6">
                         <div class="basket-search">
                             <div class="basket">
-                                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                                <a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                                 <div class="basket-number">
                                     <span>0</span>
                                 </div>
@@ -52,7 +52,7 @@
                                 <span class="border"></span>
                             </div>
                             <div class="wishlist">
-                                <a href=""><i class="fa-solid fa-heart"></i></a>
+                                <a href="Wishlist.html"><i class="fa-solid fa-heart"></i></a>
                                 <span class="border"></span>
                             </div>
                             <div class="search">
@@ -65,9 +65,9 @@
                             <div class="border"></div>
                         </div>
                         <div class="login-register d-none">
-                            <a href="">Login</a>
+                            <a href="Login.html">Login</a>
                             <div class="border"></div>
-                            <a href="">Register</a>
+                            <a href="Register.html">Register</a>
                         </div>
                     </div>
                 </div>
@@ -115,16 +115,16 @@
             <div class="container">
                 <div class="row">
                     <div class="category">
-                        <ul>
-                            <li class="item active" data-id="all"><a href="">All</a></li>
-                            <li class="item" data-id="bestsellers"><a href="">Best Sellers</a></li>
-                            <li class="item" data-id="fantasy"><a href="">Fantasy</a></li>
-                            <li class="item" data-id="history"><a href="">History</a></li>
-                            <li class="item" data-id="art"><a href="">Art</a></li>
-                            <li class="item" data-id="lovestories"><a href="">Love Stories</a></li>
+                        <ul id="myBtnContainer">
+                            <li class="item active" data-id="all"><a class="active" onclick="filterSelection('all')">All</a></li>
+                            <li class="item" data-id="bestsellers"><a  onclick="filterSelection('bestsellers')">Best Sellers</a></li>
+                            <li class="item" data-id="fantasy"><a href=""  onclick="filterSelection('fantasy')">Fantasy</a></li>
+                            <li class="item" data-id="history"><a href=""  onclick="filterSelection('history')">History</a></li>
+                            <li class="item" data-id="art"><a href="" onclick="filterSelection('art')">Art</a></li>
+                            <li class="item" data-id="lovestories"><a href=""  onclick="filterSelection('lovestories')">Love Stories</a></li>
                         </ul>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv bestsellers">
                         <div class="products" data-id="1">
                             <a href=""><img src="./assets/images/home/product-1.jpg" alt=""></a>
                             <div class="name">
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv fantasy">
                         <div class="products" data-id="2">
                             <a href=""><img src="./assets/images/home/product-2.jpg" alt=""></a>
                             <div class="name">
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv bestseller">
                         <div class="products" data-id="3">
                             <a href=""><img src="./assets/images/home/product-3.jpg" alt=""></a>
                             <div class="name">
@@ -169,7 +169,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv history">
                         <div class="products" data-id="4">
                             <a href=""><img src="./assets/images/home/product-4.jpg" alt=""></a>
                             <div class="name">
@@ -184,7 +184,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv bestseller history">
                         <div class="products" data-id="5">
                             <a href=""><img src="./assets/images/home/product-5.jpg" alt=""></a>
                             <div class="name">
@@ -199,7 +199,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv art">
                         <div class="products" data-id="6">
                             <a href=""><img src="./assets/images/home/product-6.jpg" alt=""></a>
                             <div class="name">
@@ -214,7 +214,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv art">
                         <div class="products" data-id="7">
                             <a href=""><img src="./assets/images/home/product-7.jpg" alt=""></a>
                             <div class="name">
@@ -229,7 +229,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv bestseller lovestories">
                         <div class="products" data-id="8">
                             <a href=""><img src="./assets/images/home/product-8.jpg" alt=""></a>
                             <div class="name">
@@ -244,7 +244,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv lovestories">
                         <div class="products" data-id="9">
                             <a href=""><img src="./assets/images/home/product-9.jpg" alt=""></a>
                             <div class="name">
@@ -259,7 +259,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv lovestories">
                         <div class="products" data-id="10">
                             <a href=""><img src="./assets/images/home/product-10.jpg" alt=""></a>
                             <div class="name">
@@ -274,7 +274,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv fantasy">
                         <div class="products" data-id="11">
                             <a href=""><img src="./assets/images/home/product-11.webp" alt=""></a>
                             <div class="name">
@@ -289,7 +289,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 filterDiv bestseller fantasy">
                         <div class="products" data-id="2">
                             <a href=""><img src="./assets/images/home/product-12.png" alt=""></a>
                             <div class="name">
@@ -609,10 +609,10 @@
                                 <p>follow us on social media and learn about</p>
                                 <p>new promotions.</p>
                                 <div class="icons">
-                                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                                    <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href=""><i class="fa-solid fa-basketball"></i></a>
+                                    <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="https://www.instagram.com/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="https://dribbble.com/" target="_blank"><i class="fa-solid fa-basketball"></i></a>
                                 </div>
                             </div>
                         </div>
