--- a/About.html
+++ b/About.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="./assets/scss/style.css">
     <title>About</title>
 </head>
+
 <body>
     <header>
         <section id="navbar">
@@ -70,6 +72,177 @@
         </section>
     </header>
     <main>
+        <section id="background">
+            <div class="background-image"
+                style="background-image:url(./assets/images/about/about-background-image.jpg)">
+                <div class="title-name">
+                    <p>INFO</p>
+                    <h3>About Us</h3>
+                </div>
+            </div>
+        </section>
+        <section id="carts">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="carts1">
+                            <div class="image1">
+                                <img src="./assets/images/about/cart-1.png" alt="">
+                            </div>
+                            <div class="small-logo1">
+                                <span>❦</span>
+                            </div>
+                            <div class="name1">
+                                <h3>Bestsellers</h3>
+                            </div>
+                            <div class="description1">
+                                <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="carts2">
+                            <div class="image">
+                                <img src="./assets/images/about/cart-2.png" alt="">
+                            </div>
+                            <div class="small-logo2">
+                                <span>❦</span>
+                            </div>
+                            <div class="name2">
+                                <h3>Readers choice</h3>
+                            </div>
+                            <div class="description2">
+                                <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="carts3">
+                            <div class="image">
+                                <img src="./assets/images/about/cart-3.png" alt="">
+                            </div>
+                            <div class="small-logo3">
+                                <span>❦</span>
+                            </div>
+                            <div class="name3">
+                                <h3>Biographical</h3>
+                            </div>
+                            <div class="description3">
+                                <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="carts4">
+                            <div class="image">
+                                <img src="./assets/images/about/cart-4.png" alt="">
+                            </div>
+                            <div class="small-logo4">
+                                <span>❦</span>
+                            </div>
+                            <div class="name4">
+                                <h3>Science Fiction</h3>
+                            </div>
+                            <div class="description4">
+                                <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="autobiography1">
+            <div class="container">
+                <div class="autobiography1"
+                    style="background-image: url(./assets/images/home/authobiography-backgorund.jpg)">
+                    <div class="left">
+                        <div class="name">
+                            <p>AUTOBIOGRAPHY</p>
+                        </div>
+                        <div class="title">
+                            <h3>Long printing history</h3>
+                        </div>
+                        <div class="description">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore vero, voluptatum repellendus in sequi possimus!</p>
+                        </div>
+                        <div class="button">
+                            <button>
+                                <p>READ MORE</p>
+                            </button>
+                        </div>
+                        <div class="image">
+                            <img src="./assets/images/home/coffe.png" alt="">
+                        </div>
+                    </div>
+                    <div class="right" style="background-image: url(./assets/images/home/zerler.png)">
+                        <div class="image1">
+                            <img src="./assets/images/about/autography-image-1.jpg" alt="">
+                        </div>
+                        <div class="image2">
+                            <img src="./assets/images/about/autography-image-2.jpg" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <section id="autobiography2">
+            <div class="container">
+                <div class="autobiography2">
+
+                    <div class="left">
+                        <div class="backgrounds">
+                            <div class="backgorund-image"
+                                style="background-image: url(./assets/images/home/background-image-2.png)">
+
+                            </div>
+                            <div class="images">
+                                <div class="image1">
+                                    <img src="./assets/images/about/autography-image-3.jpg" alt="">
+                                </div>
+                                <div class="image2">
+                                    <img src="./assets/images/about/autography-image-4.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="right">
+                        <div class="name">
+                            <p>AUTOBIOGRAPHY</p>
+                        </div>
+                        <div class="title">
+                            <h3>Coffee with favorite Erika</h3>
+                        </div>
+                        <div class="description">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore vero, voluptatum repellendus in sequi possimus!</p>
+                        </div>
+                        <div class="button">
+                            <button>
+                                <p>READ MORE</p>
+                            </button>
+                        </div>
+                        <div class="image">
+                            <img src="./assets/images/home/plane.png" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <section id="promo-products">
+            <div class="container">
+                <div class="title">
+                    <p>SHOP BESTSELLERS</p>
+                </div>
+                <div class="name">
+                    <h1>Promo products</h1>
+                </div>
+                <div class="description">
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <section id="footer">
@@ -95,10 +268,14 @@
                                 <p>follow us on social media and learn about</p>
                                 <p>new promotions.</p>
                                 <div class="icons">
-                                    <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="https://www.instagram.com/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="https://dribbble.com/" target="_blank"><i class="fa-solid fa-basketball"></i></a>
+                                    <a href="https://twitter.com/" target="_blank"><i
+                                            class="fa-brands fa-twitter"></i></a>
+                                    <a href="https://www.instagram.com/?hl=en" target="_blank"><i
+                                            class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/" target="_blank"><i
+                                            class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="https://dribbble.com/" target="_blank"><i
+                                            class="fa-solid fa-basketball"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -159,4 +336,5 @@
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/about.js"></script>
 </body>
+
 </html>
