--- a/Home.html
+++ b/Home.html
@@ -75,7 +75,7 @@
         </section>
     </header>
     <main>
-        
+
         <section id="slider">
             <div class="container">
                 <div class="swiper mySwiper">
@@ -117,15 +117,22 @@
                 <div class="row">
                     <div class="category">
                         <ul id="myBtnContainer">
-                            <li class="item active" data-id="all"><a class="active" onclick="filterSelection('all')">All</a></li>
-                            <li class="item" data-id="bestsellers"><a  onclick="filterSelection('bestsellers')">Best Sellers</a></li>
-                            <li class="item" data-id="fantasy"><a href=""  onclick="filterSelection('fantasy')">Fantasy</a></li>
-                            <li class="item" data-id="history"><a href=""  onclick="filterSelection('history')">History</a></li>
-                            <li class="item" data-id="art"><a href="" onclick="filterSelection('art')">Art</a></li>
-                            <li class="item" data-id="lovestories"><a href=""  onclick="filterSelection('lovestories')">Love Stories</a></li>
+                            <li class="item active" data-id="all"><a href="#" class="btn-tab"
+                                    onclick="filterSelection('all')">All</a></li>
+                            <li class="item" data-id="bestsellers">
+                                <a class="btn-tab" onclick="filterSelection('bestsellers')">Best Sellers</a>
+                            </li>
+                            <li class="item" data-id="fantasy"><a class="btn-tab"
+                                    onclick="filterSelection('fantasy')">Fantasy</a></li>
+                            <li class="item" data-id="history"><a class="btn-tab"
+                                    onclick="filterSelection('history')">History</a></li>
+                            <li class="item" data-id="art"><a class="btn-tab" onclick="filterSelection('art')">Art</a>
+                            </li>
+                            <li class="item" data-id="lovestories"><a class="btn-tab"
+                                    onclick="filterSelection('lovestories')">Love Stories</a></li>
                         </ul>
                     </div>
-                    <div class="col-3 filterDiv bestsellers">
+                    <div class="col-3 filterDiv fantasy">
                         <div class="products" data-id="1">
                             <a href=""><img src="./assets/images/home/product-1.jpg" alt=""></a>
                             <div class="name">
@@ -155,7 +162,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv bestseller">
+                    <div class="col-3 filterDiv bestsellers">
                         <div class="products" data-id="3">
                             <a href=""><img src="./assets/images/home/product-3.jpg" alt=""></a>
                             <div class="name">
@@ -185,7 +192,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv bestseller history">
+                    <div class="col-3 filterDiv bestsellers history">
                         <div class="products" data-id="5">
                             <a href=""><img src="./assets/images/home/product-5.jpg" alt=""></a>
                             <div class="name">
@@ -230,7 +237,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv bestseller lovestories">
+                    <div class="col-3 filterDiv bestsellers lovestories">
                         <div class="products" data-id="8">
                             <a href=""><img src="./assets/images/home/product-8.jpg" alt=""></a>
                             <div class="name">
@@ -290,7 +297,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv bestseller fantasy">
+                    <div class="col-3 filterDiv lovestories fantasy">
                         <div class="products" data-id="2">
                             <a href=""><img src="./assets/images/home/product-12.png" alt=""></a>
                             <div class="name">
@@ -379,7 +386,8 @@
                                     <p>Jennifer Doe</p>
                                 </div>
                                 <div class="author-description">
-                                    <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt mollit.</p>
+                                    <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt
+                                        mollit.</p>
                                 </div>
                             </div>
                         </div>
@@ -395,7 +403,8 @@
                                     <p>James Coleman</p>
                                 </div>
                                 <div class="author-description">
-                                    <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt mollit.</p>
+                                    <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt
+                                        mollit.</p>
                                 </div>
                             </div>
                         </div>
@@ -411,7 +420,8 @@
                                     <p>Linda Heyes</p>
                                 </div>
                                 <div class="author-description">
-                                    <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt mollit.</p>
+                                    <p>Except sint occaecat cupidatat non proident, sunt culpa qui officia deserunt
+                                        mollit.</p>
                                 </div>
                             </div>
                         </div>
@@ -431,7 +441,8 @@
                             <h3>This month's guest host</h3>
                         </div>
                         <div class="description">
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore vero, voluptatum repellendus in sequi possimus!</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore vero, voluptatum
+                                repellendus in sequi possimus!</p>
                         </div>
                         <div class="button">
                             <button>
@@ -483,7 +494,8 @@
                             <h3>Travelogue of the year</h3>
                         </div>
                         <div class="description">
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore vero, voluptatum repellendus in sequi possimus!</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore vero, voluptatum
+                                repellendus in sequi possimus!</p>
                         </div>
                         <div class="button">
                             <button>
@@ -610,10 +622,14 @@
                                 <p>follow us on social media and learn about</p>
                                 <p>new promotions.</p>
                                 <div class="icons">
-                                    <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="https://www.instagram.com/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="https://dribbble.com/" target="_blank"><i class="fa-solid fa-basketball"></i></a>
+                                    <a href="https://twitter.com/" target="_blank"><i
+                                            class="fa-brands fa-twitter"></i></a>
+                                    <a href="https://www.instagram.com/?hl=en" target="_blank"><i
+                                            class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/" target="_blank"><i
+                                            class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="https://dribbble.com/" target="_blank"><i
+                                            class="fa-solid fa-basketball"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -672,6 +688,60 @@
     <script src="./assets/slick-1.8.1/slick/slick.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/home.js"></script>
+    <script src="./assets/js/custom.js"></script>
+
+    <!-- <script>
+
+
+        filterSelection("all")
+        function filterSelection(c) {
+            console.log("click;ar");
+            var x, i;
+            x = document.getElementsByClassName("filterDiv");
+            console.log();
+            if (c == "all") c = "";
+            for (i = 0; i < x.length; i++) {
+                w3RemoveClass(x[i], "show");
+                if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
+            }
+        }
+
+        function w3AddClass(element, name) {
+            var i, arr1, arr2;
+            arr1 = element.className.split(" ");
+            arr2 = name.split(" ");
+            for (i = 0; i < arr2.length; i++) {
+                if (arr1.indexOf(arr2[i]) == -1) { element.className += " " + arr2[i]; }
+            }
+        }
+
+        function w3RemoveClass(element, name) {
+            var i, arr1, arr2;
+            arr1 = element.className.split(" ");
+            arr2 = name.split(" ");
+            for (i = 0; i < arr2.length; i++) {
+                while (arr1.indexOf(arr2[i]) > -1) {
+                    arr1.splice(arr1.indexOf(arr2[i]), 1);
+                }
+            }
+            element.className = arr1.join(" ");
+        }
+
+        // Add active class to the current button (highlight it)
+        var btnContainer = document.getElementById("myBtnContainer");
+        var btns = btnContainer.getElementsByClassName("btn-tab");
+
+        for (var i = 0; i < btns.length; i++) {
+
+            btns[i].addEventListener("click", function () {
+                console.log(this.parentNode);
+                var current = document.getElementsByClassName("active");
+                console.log(current);
+                current[0].className = current[0].className.replace(" active", "");
+                this.parentNode.className += " active";
+            });
+        }
+    </script> -->
 </body>
 
 </html>
