Add New Section

--- a/Blog.html
+++ b/Blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="./assets/scss/style.css">
     <title>Blog</title>
 </head>
+
 <body>
     <header>
         <section id="navbar">
@@ -70,6 +72,82 @@
         </section>
     </header>
     <main>
+        <section id="background">
+            <div class="background-images"
+                style="background-image:url(./assets/images/login/login-backgorund-image.jpg)">
+                <h2>Blog</h2>
+            </div>
+        </section>
+        <section id="blog">
+            <div class="container">
+                <div class="col-8">
+                    <div class="section-1">
+                        <div class="image-1">
+                            <a href=""><img src="./assets/images/blog/blog-image-1.jpg" alt=""></a>
+                        </div>
+                        <div class="name-date">
+                            <div class="name">
+                                <p>JOHN STRASS /</p>
+                            </div>
+                            <div class="date">
+                                <p> July 29, 2019 </p>
+                            </div>
+                        </div>
+                        <div class="title">
+                            <a href="">Coffee and croissant with our favorite Erika</a>
+                        </div>
+                        <div class="description">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur molestie sed tortor id
+                                euismod. Phasellus mi odio, pulvinar vitae vestibulum fringilla, dapibus eu sem. Sed
+                                consectetur sem ac tortor iaculis, sed sodales est faucibus. Integer nec feugiat justo.
+                                Suspendisse potenti. Vivamus sit amet congue magna, eget maximus nunc. Mauris mollis
+                                magna elementum, varius orci a, blandit est. Vestibulum eget sodales...</p>
+                        </div>
+                        <div class="read-more">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                    <div class="section-2">
+                        <div class="sign">
+                            <h1>’’</h1>
+                        </div>
+                        <div class="description">
+                            <p>“The person, be it gentleman or lady, who has not pleasure in a good novel, must be intolerably stupid.”</p>
+                        </div>
+                        <div class="author-name">
+                            <p>JANE AUSTEN</p>
+                        </div>
+                    </div>
+                    <div class="section-3">
+                        <div class="image-1">
+                            <a href=""><img src="./assets/images/blog/blog-image-2.jpg" alt=""></a>
+                        </div>
+                        <div class="name-date">
+                            <div class="name">
+                                <p>JOHN STRASS /</p>
+                            </div>
+                            <div class="date">
+                                <p> July 29, 2019 </p>
+                            </div>
+                        </div>
+                        <div class="title">
+                            <a href="">A Shakespearean reading evening in book club</a>
+                        </div>
+                        <div class="description">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur molestie sed tortor id
+                                euismod. Phasellus mi odio, pulvinar vitae vestibulum fringilla, dapibus eu sem. Sed
+                                consectetur sem ac tortor iaculis, sed sodales est faucibus. Integer nec feugiat justo.
+                                Suspendisse potenti. Vivamus sit amet congue magna, eget maximus nunc. Mauris mollis
+                                magna elementum, varius orci a, blandit est. Vestibulum eget sodales...</p>
+                        </div>
+                        <div class="read-more">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
     <footer>
         <section id="footer">
@@ -95,10 +173,14 @@
                                 <p>follow us on social media and learn about</p>
                                 <p>new promotions.</p>
                                 <div class="icons">
-                                    <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="https://www.instagram.com/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="https://dribbble.com/" target="_blank"><i class="fa-solid fa-basketball"></i></a>
+                                    <a href="https://twitter.com/" target="_blank"><i
+                                            class="fa-brands fa-twitter"></i></a>
+                                    <a href="https://www.instagram.com/?hl=en" target="_blank"><i
+                                            class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/" target="_blank"><i
+                                            class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="https://dribbble.com/" target="_blank"><i
+                                            class="fa-solid fa-basketball"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -159,4 +241,5 @@
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/blog.js"></script>
 </body>
+
 </html>
