Add New Section

--- a/Register.html
+++ b/Register.html
@@ -78,37 +78,37 @@
                 <h2>Register</h2>
             </div>
         </section>
-        <section id="login-form">
+        <section id="register-form">
             <div class="container">
                 <div class="login">
                     <h2>Register</h2>
                 </div>
                 <div class="first-name-label">
-                    <label for="">First Name</label>
+                    <label for="">First Name *</label>
                 </div>
                 <div class="first-name-input">
                     <input type="text">
                 </div>
                 <div class="last-name-label">
-                    <label for="">Last Name</label>
+                    <label for="">Last Name *</label>
                 </div>
                 <div class="last-name-input">
                     <input type="text">
                 </div>
                 <div class="email-address-label">
-                    <label for="">Email Address</label>
+                    <label for="">Email Address *</label>
                 </div>
                 <div class="email-address-input">
                     <input type="email">
                 </div>
                 <div class="password-label">
-                    <label for="">Password</label>
+                    <label for="">Password *</label>
                 </div>
                 <div class="password-input">
                     <input type="password">
                 </div>
                 <div class="confirm-password-label">
-                    <label for="">Confirm Password</label>
+                    <label for="">Confirm Password *</label>
                 </div>
                 <div class="confirm-password-input">
                     <input type="password">
@@ -118,8 +118,8 @@
                         <button>Register</button>
                     </div>
                 </div>
-                
-                
+
+
             </div>
         </section>
     </main>
@@ -202,7 +202,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" <script
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
         integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
         crossorigin="anonymous"></script>
