--- a/Login.html
+++ b/Login.html
@@ -84,13 +84,13 @@
                     <h2>Login</h2>
                 </div>
                 <div class="username-label">
-                    <label for="">Username or email address</label>
+                    <label for="">Username or email address *</label>
                 </div>
                 <div class="username-input">
                     <input type="email">
                 </div>
                 <div class="password-label">
-                    <label for="">Password</label>
+                    <label for="">Password *</label>
                 </div>
                 <div class="password-input">
                     <input type="password">
