Add New Section

--- a/ProductDetail.html
+++ b/ProductDetail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="./assets/scss/style.css">
     <title>Product-Detail</title>
 </head>
+
 <body>
     <header>
         <section id="navbar">
@@ -69,7 +71,153 @@
             </div>
         </section>
     </header>
+    <main>
+        <section id="background">
+            <div class="background-images"
+                style="background-image:url(./assets/images/forgot-password/forgot-password-backgorund-image.jpg)">
+                <h2>Product Detail</h2>
+            </div>
+        </section>
+        <section id="detail">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        <div class="product-image">
+                            <img src="./assets/images/product-detail/product-image.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="section-1">
+                            <div class="name">
+                                <p>BY JANE DOE</p>
+                            </div>
+                            <div class="wellness">
+                                <h2>Wellness And Paradise</h2>
+                            </div>
+                            <div class="price">
+                                <p>$67.00</p>
+                            </div>
+                            <div class="description">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor in reprehenderit in voluptate velit. Simul vidisse eu vim. Probo
+                                    tincidunt ne vel.</p>
+                            </div>
+                            <div class="add-basket-button">
+                                <button>ADD TO BASKET</button>
+                            </div>
+                            <div class="sku-code">
+                                <p>SKU:</p>
+                                <span>42</span>
+                            </div>
+                            <div class="categories">
+                                <p>Categories:</p>
+                                <span>Art, Best Sellers</span>
+                            </div>
+                            <div class="tags">
+                                <p>Tags:</p>
+                                <span>Fiction, New, Novel</span>
+                            </div>
 
+                            <div class="border"></div>
+
+                            <div class="authorimage-authorname">
+                                <div class="author-image">
+                                    <img src="./assets/images/product-detail/user-1.png" alt="">
+                                </div>
+                                <div class="author-name">
+                                    <p>France</p>
+                                    <span>Jane Doe</span>
+                                </div>
+                            </div>
+
+                            <div class="author-description">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                                    pariatur.</p>
+                            </div>
+
+                            <div class="border mt-5"></div>
+
+                            <div class="author-comment">
+                                <div class="starts">
+                                    <i class="fa-solid fa-star text-danger"></i>
+                                    <i class="fa-solid fa-star text-danger"></i>
+                                    <i class="fa-solid fa-star text-danger"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+
+                                <div class="comment">
+                                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea."</p>
+                                </div>
+
+                                <div class="logo-name">
+                                    <div class="logo-image">
+                                        <img src="./assets/images/product-detail/logo-1.png" alt="">
+                                    </div>
+                                    <div class="names">
+                                        <p>Michael Lord - New York Times</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="author-comment mt-3">
+                                <div class="starts">
+                                    <i class="fa-solid fa-star text-danger"></i>
+                                    <i class="fa-solid fa-star text-danger"></i>
+                                    <i class="fa-solid fa-star text-danger"></i>
+                                    <i class="fa-solid fa-star text-danger"></i>
+                                    <i class="fa-solid fa-star text-danger"></i>
+                                </div>
+
+                                <div class="comment">
+                                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea."</p>
+                                </div>
+
+                                <div class="logo-name">
+                                    <div class="logo-image">
+                                        <img src="./assets/images/product-detail/logo-2.png" alt="">
+                                    </div>
+                                    <div class="names">
+                                        <p>Joanne Smith - Huffington Post</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="author-comment mt-3">
+                                <div class="starts">
+                                    <i class="fa-solid fa-star text-danger"></i>
+                                    <i class="fa-solid fa-star text-danger"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+
+                                <div class="comment">
+                                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea."</p>
+                                </div>
+
+                                <div class="logo-name">
+                                    <div class="logo-image">
+                                        <img src="./assets/images/product-detail/logo-3.png" alt="">
+                                    </div>
+                                    <div class="names">
+                                        <p>Minnie Loyd - The Guardian</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section id="review-area">
+
+        </section>
+    </main>
     <footer>
         <section id="footer">
             <div class="container">
@@ -162,4 +310,5 @@
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/productdetail.js"></script>
 </body>
+
 </html>
