--- a/ForgotPassword.html
+++ b/ForgotPassword.html
@@ -11,7 +11,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/scss/style.css">
-    <title>Login</title>
+    <title>Forgot-Password</title>
 </head>
 
 <body>
@@ -74,48 +74,26 @@
     <main>
         <section id="background">
             <div class="background-images"
-                style="background-image:url(./assets/images/login/login-backgorund-image.jpg)">
-                <h2>Login</h2>
+                style="background-image:url(./assets/images/forgot-password/forgot-password-backgorund-image.jpg)">
+                <h2>Forgot Password</h2>
             </div>
         </section>
         <section id="login-form">
             <div class="container">
                 <div class="login">
-                    <h2>Login</h2>
+                    <h2>Forgot Password</h2>
                 </div>
                 <div class="username-label">
-                    <label for="">Username or email address *</label>
+                    <label for="">Email *</label>
                 </div>
                 <div class="username-input">
                     <input type="email">
                 </div>
-                <div class="password-label">
-                    <label for="">Password *</label>
+
+                <div class="login-button">
+                    <button>Send</button>
                 </div>
-                <div class="password-input">
-                    <input type="password">
-                </div>
-                <div class="remenber-login">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-                        <label style="color:gray" class="form-check-label" for="form2Example31"> Remember me </label>
-                    </div>
-                    <div class="login-button">
-                        <button>LOG IN</button>
-                    </div>
-                </div>
-                <div class="forgot-password">
-                    <a href="ForgotPassword.html">Forgot Password?</a>
-                </div>
-                <div class="account">
-                    <div class="dont-account">
-                        <p>Don't have an account?</p>
-                    </div>
-                    <div class="register">
-                        <a href="Register.html">Register</a>
-                    </div>
-                </div>
-                
+
             </div>
         </section>
     </main>
@@ -195,13 +173,11 @@
         </section>
     </footer>
 
-
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous">
-        </script>
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
@@ -210,7 +186,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./assets/slick-1.8.1/slick/slick.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
-    <script src="./assets/js/login.js"></script>
+    <script src="./assets/js/forgotpassword.js"></script>
 </body>
 
 </html>
