--- a/Shop.html
+++ b/Shop.html
@@ -100,13 +100,13 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-                                        <a href=""><img src="./assets/images/shop/product-1.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-1.jpg"alt=""></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">John Strass</a>
+                                        <a href="ProductDetail.html">John Strass</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Winter Darkest Tragedy</a>
+                                        <a href="ProductDetail.html">Winter Darkest Tragedy</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$38.00</p>
@@ -117,13 +117,14 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-                                        <a href=""><img src="./assets/images/shop/product-2.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-2.jpg"
+                                                alt=""></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">Jessica Johnson</a>
+                                        <a href="ProductDetail.html">Jessica Johnson</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Symphony Of Trilogy</a>
+                                        <a href="ProductDetail.html">Symphony Of Trilogy</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$22.00</p>
@@ -134,14 +135,14 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-
-                                        <a href=""><img src="./assets/images/shop/product-3.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-3.jpg"
+                                                alt=""></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">Jane Doe</a>
+                                        <a href="ProductDetail.html">Jane Doe</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Wellness And Paradise</a>
+                                        <a href="ProductDetail.html">Wellness And Paradise</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$67.00</p>
@@ -152,14 +153,14 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-                                        <a href=""><img src="./assets/images/shop/product-4.jpg" alt=""><a
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-4.jpg" alt=""><a
                                                 href=""></a></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">James Hoffman</a>
+                                        <a href="ProductDetail.html">James Hoffman</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Renaissance History</a>
+                                        <a href="ProductDetail.html">Renaissance History</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$30.00</p>
@@ -170,13 +171,13 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-                                        <a href=""><img src="./assets/images/shop/product-5.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-5.jpg" alt=""></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">Adam Strass</a>
+                                        <a href="ProductDetail.html">Adam Strass</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Fantasy Storytelling</a>
+                                        <a href="ProductDetail.html">Fantasy Storytelling</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$29.00</p>
@@ -187,13 +188,13 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-                                        <a href=""><img src="./assets/images/shop/product-6.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-6.jpg" alt=""></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">John Strass</a>
+                                        <a href="ProductDetail.html">John Strass</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Easy Fast Cooking</a>
+                                        <a href="ProductDetail.html">Easy Fast Cooking</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$78.00</p>
@@ -204,13 +205,13 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-                                        <a href=""><img src="./assets/images/shop/product-7.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-7.jpg" alt=""></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">James Hoffman</a>
+                                        <a href="ProductDetail.html">James Hoffman</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Amster Hamster Trip</a>
+                                        <a href="ProductDetail.html">Amster Hamster Trip</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$69.00</p>
@@ -221,13 +222,13 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-                                        <a href=""><img src="./assets/images/shop/product-8.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-8.jpg" alt=""></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">Jane Doe</a>
+                                        <a href="ProductDetail.html">Jane Doe</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Summertime Love Stories</a>
+                                        <a href="ProductDetail.html">Summertime Love Stories</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$33.00</p>
@@ -238,13 +239,13 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-                                        <a href=""><img src="./assets/images/shop/product-9.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-9.jpg" alt=""></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">Jessica Johnson</a>
+                                        <a href="ProductDetail.html">Jessica Johnson</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Learn To Love Yourself</a>
+                                        <a href="ProductDetail.html">Learn To Love Yourself</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$50.00</p>
@@ -255,13 +256,13 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-                                        <a href=""><img src="./assets/images/shop/product-10.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-10.jpg" alt=""></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">John Strass</a>
+                                        <a href="ProductDetail.html">John Strass</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Japan Travel Stories</a>
+                                        <a href="ProductDetail.html">Japan Travel Stories</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$56.00</p>
@@ -272,13 +273,13 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-                                        <a href=""><img src="./assets/images/shop/product-11.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-11.jpg" alt=""></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">Adam Strass</a>
+                                        <a href="ProductDetail.html">Adam Strass</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Beauty Unplugged</a>
+                                        <a href="ProductDetail.html">Beauty Unplugged</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$46.00</p>
@@ -289,13 +290,13 @@
                             <div class="col-4">
                                 <div class="products">
                                     <div class="image">
-                                        <a href=""><img src="./assets/images/shop/product-12.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-12.jpg" alt=""></a>
                                     </div>
                                     <div class="name">
-                                        <a href="">James Hoffman</a>
+                                        <a href="ProductDetail.html">James Hoffman</a>
                                     </div>
                                     <div class="category-name">
-                                        <a href="">Lost Dreams in Paris</a>
+                                        <a href="ProductDetail.html">Lost Dreams in Paris</a>
                                     </div>
                                     <div class="price-button">
                                         <p>$37.00</p>
